--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="magical-border">
         <div class="container">
-            <h1>The Sorting Ceremony</h1>
+            <h1>The Sharting Ceremony</h1>
             <img src="sorting-hat.png" alt="Sorting Hat" id="sorting-hat" class="sorting-hat">
             <div id="result" class="hidden">
                 <h2>You belong in...</h2>
@@ -20,7 +20,7 @@
                 <p id="house-description" class="description-text"></p>
                 <button id="sort-again" class="magical-button hidden">Sort Again!</button>
             </div>
-            <button id="sort-button" class="magical-button">Place the Sorting Hat upon your head</button>
+            <button id="sort-button" class="magical-button">Place the Sharting Hat upon your head</button>
         </div>
     </div>
     <audio id="sorting-sound" src="sorting-sound.mp3"></audio>
